--- a/css/blogpost.css
+++ b/css/blogpost.css
@@ -5,16 +5,38 @@ body{
     margin: 0;
     padding: 0;
 }
+
+#cabecera {
+    background: #33A;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.75);
+    color: #fff;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+    text-align: center;
+}
+
+#cabecera #tagline{
+    font-size: 0.8em;
+    font-weight: normal;
+    padding: 0 0 0 1em;
+}
+
 #container{
     width: 70%;
     margin: 0 auto;
-    padding: 1em;
+    padding: 0;
     text-align: left;
     border: 1px solid #ddd;
 }
+
 #container h1{
     font-size: 30px;
     font-weight: normal;
     margin: 0;
     padding: 0;
+}
+
+#post{
+    padding: 1em;
 }
