--- a/css/blogpost.css
+++ b/css/blogpost.css
@@ -1,6 +1,6 @@
 body{
     text-align: center;
-    font-family: "Arial", sans-serif;
+    font-family: 'Courier New', Courier, sans-serif;
     color: #333;
     margin: 0;
     padding: 0;
