--- a/css/blogpost.css
+++ b/css/blogpost.css
@@ -1,7 +1,7 @@
 body{
     text-align: center;
     font-family: 'arial', Courier, sans-serif;
-    color: #333;
+    color: blueviolet;
     margin: 0;
     padding: 0;
 }
