--- a/css/blogpost.css
+++ b/css/blogpost.css
@@ -1,7 +1,7 @@
 body
 {
-    background: #1e1f24;
-    color: #333;
+    background: #292a2a;
+    color: #000000;
     text-align: center;
     font-family: Arial;
     font-size: 16px;
