--- a/css/blogpost.css
+++ b/css/blogpost.css
@@ -58,3 +58,11 @@ body
     text-align: center;
     padding: 0.5em;
 }
+
+#imagen
+{
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
